feat(service): 重构AI聊天日志和模型服务
- 添加AiModelConstants常量类统一管理AI相关配置
- 创建AiModelException异常类处理AI模型调用异常
- 优化AiChatLogService使用常量和改进代码结构
- 重构ChatModelFactoryImpl支持响应式调用和错误处理
- 改进LoggingChatModel异步日志记录机制
- 优化OpenAiChatModel使用缓存WebClient和默认值处理
- 更新.gitignore添加/.ai-dev-rules/和/docs/目录
- 完善ChatMessage消息角色枚举和构建方法